# Map_Art_App

./: Mapping_CityGrids_Python_V2.ipynb  README.md  app.py  map_art_app.py  pyproject.toml  requirements.txt  setup.py
map_art_app/: app.py
map_art_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
