[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map_art_app"
version = "0.1.0"
description = "A Streamlit app for creating map art"
readme = "README.md"
authors = [
    {name = "Miles Van Denburg", email = "miles.vandenburg@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.30.0",
    "streamlit-folium>=0.15.0",
    "folium>=0.14.0",
    "osmnx>=1.6.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/MVanDenburg92/map_art_app"

[tool.setuptools]
packages = ["map_art_app"]